262578989263/infra/templates/gatewayclass-kong-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong-class
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app.kubernetes.io/name: kong-class
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: infra
    cloudman.io/creator: Anderson-Dutra
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: prod-config
    namespace: infra
