262578989263/infra/templates/referencegrant-grant-infra-to-argocd1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: grant-infra-to-argocd1
  namespace: argocd1
  labels:
    app.kubernetes.io/name: grant-infra-to-argocd1
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: infra
    cloudman.io/creator: Anderson-Dutra
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: infra
  to:
    - group: ""
      kind: Service
