262578989263/infra/templates/referencegrant-grant-infra-to-struct8-agent.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: grant-infra-to-struct8-agent
  namespace: struct8-agent
  labels:
    app.kubernetes.io/name: grant-infra-to-struct8-agent
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: infra
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: infra
  to:
    - group: ""
      kind: Service
