262578989263/infra/templates/service-kong-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-svc
  namespace: infra
  labels:
    app.kubernetes.io/name: kong-svc
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: infra
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ClusterIP
  ports:
    - name: http-80
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: kong
