262578989263/infra/templates/httproute-route2-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route2-prometheus
  namespace: infra
  labels:
    struct8.io/origin: route2
    app.kubernetes.io/name: route2-prometheus
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: infra
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infra
      sectionName: g-api3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-svc
          namespace: struct8-agent
          port: 80
  hostnames:
    - prometheus.k8h.admin.billingpay.com.br
