262578989263/infra/templates/httproute-route2-struct8-agent.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route2-struct8-agent
  namespace: infra
  labels:
    app.kubernetes.io/name: route2-struct8-agent
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: infra
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infra
      sectionName: g-api3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: struct8-agent-svc
          namespace: struct8-agent
          port: 80
  hostnames:
    - agent.k8h.admin.billingpay.com.br
