262578989263/infra/templates/httproute-route3-kong.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route3-kong
  namespace: infra
  labels:
    app.kubernetes.io/name: route3-kong
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: infra
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infra
      sectionName: g-api3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kong-svc
          namespace: infra
          port: 80
